@@ -1,5 +1,14 @@
 AutoPilot Release Notes
 
+Previously unpublished release...
+
+ - Deutsch
+    - Die Anzeige des freigegebenen Ordnernamens (usbshare1, usbshare2 etc.) eines externen Datenträgeres wurde angepasst.
+
+ - English
+    - The display of the shared folder name (usbshare1, usbshare2 etc.) of an external data carrier has been adjusted.
+
+
 Version 1.1-700 vom 05.04.2024
 
  - Deutsch
